cleaning up html

--- a/frontend/src/app/components/bus-form/bus-form.html
+++ b/frontend/src/app/components/bus-form/bus-form.html
@@ -125,7 +125,7 @@
     </div><br>
 
     <div class="form-group">
-      <label for="busRidePrice">bus Ride Price</label>
+      <label for="busRidePrice">Bus ride price</label>
       <input type="number" 
              class="form-control" 
              id="busRidePrice" 
