--- a/frontend/src/app/components/flight-form/flight-form.html
+++ b/frontend/src/app/components/flight-form/flight-form.html
@@ -13,7 +13,7 @@
                  [class.invalid]="isFieldInvalid('flightNumber')">
           @if (isFieldInvalid('flightNumber')) {
             <div class="text-danger">
-                Flight Number must be 5-10 characters
+                Flight number must be 5-10 characters
             </div>
           }
         </div><br>
@@ -29,7 +29,7 @@
                  [class.invalid]="isFieldInvalid('flightAirline')">
           @if (isFieldInvalid('flightAirline')) {
             <div class="text-danger">
-                Enter the Airline for this flight (minimum 2 characters)
+                Enter the airline for this flight (minimum 2 characters)
             </div>
           }
         </div><br>
