--- a/frontend/src/app/components/train-form/train-form.html
+++ b/frontend/src/app/components/train-form/train-form.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="heading">Add/edit Train details</h1>
+  <h1 class="heading">Add/edit Train ticket details</h1>
   <form class="form" [formGroup]="trainForm" (ngSubmit)="onSubmit()">
 
     <div class="form-group">
@@ -125,7 +125,7 @@
     </div><br>
 
     <div class="form-group">
-      <label for="trainRidePrice">train Ride Price</label>
+      <label for="trainRidePrice">Train Ride Price</label>
       <input type="number" 
              class="form-control" 
              id="trainRidePrice" 
