--- a/frontend/src/app/components/client-form/client-form.html
+++ b/frontend/src/app/components/client-form/client-form.html
@@ -150,7 +150,7 @@
 
         <!-- Address Field -->
         <div class="form-group">
-          <label for="address">Address</label>
+          <label for="address">Address *</label>
           <textarea
             id="address"
             formControlName="address"
@@ -310,6 +310,7 @@
           id="editEmail"
           formControlName="email"
           class="form-control"
+          value="{{ currentClient.email }}"
           [class.error]="isFieldInvalid('email')">
         @if (isFieldInvalid('email')) {
           <div class="error-message">
@@ -327,6 +328,7 @@
             id="editFirstName"
             formControlName="firstName"
             class="form-control"
+            value="{{ currentClient.firstName }}"
             [class.error]="isFieldInvalid('firstName')">
           @if (isFieldInvalid('firstName')) {
             <div class="error-message">
@@ -342,6 +344,7 @@
             id="editLastName"
             formControlName="lastName"
             class="form-control"
+            value="{{ currentClient.lastName }}"
             [class.error]="isFieldInvalid('lastName')">
           @if (isFieldInvalid('lastName')) {
             <div class="error-message">
@@ -359,6 +362,7 @@
           id="editPhone"
           formControlName="phone"
           class="form-control"
+          value="{{ currentClient.phone }}"
           [class.error]="isFieldInvalid('phone')">
         @if (isFieldInvalid('phone')) {
           <div class="error-message">
@@ -374,6 +378,7 @@
           id="editAddress"
           formControlName="address"
           class="form-control"
+          value="{{ currentClient.address }}"
           [class.error]="isFieldInvalid('address')"
           rows="3">
         </textarea>
@@ -406,5 +411,4 @@
       </div>
     </form>
   }
-
 </div>
